--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@ant-design/icons-angular": "9.0.1",
     "lodash": "^4.17.19",
     "ng-zorro-antd": "^9.3.0",
     "rxjs": "~6.5.5",
